[2025-10-08] 이미지 사이즈 조정, 무한 스크롤 로직 추가